RESOLVED FIXED174101
WebAudioSourceProviderAVFObjC should not reconfigure for each data call
https://bugs.webkit.org/show_bug.cgi?id=174101
Summary WebAudioSourceProviderAVFObjC should not reconfigure for each data call
youenn fablet
Reported 2017-07-03 12:00:16 PDT
It should only do that when there is a change in the data format.
Attachments
Patch (13.70 KB, patch)
2017-07-03 12:15 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-07-03 12:15:25 PDT
WebKit Commit Bot
Comment 2 2017-07-03 14:01:04 PDT
Comment on attachment 314506 [details] Patch Clearing flags on attachment: 314506 Committed r219090: <http://trac.webkit.org/changeset/219090>
WebKit Commit Bot
Comment 3 2017-07-03 14:01:05 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.